# database-converter

./: .gitignore  LICENSE  README.rst  main.py  prepare.sh  pyproject.toml
app/db/: __init__.py  admin.py  config.py  migrate.py  mysql.py  postgres.py  sqlite.py
app/db/orm/: __init__.py  admin.py  migrate.py  models.py
app/db/sql/: init_hw.sql  init_hw_lite.sql  init_hw_my.sql  init_hw_postgre.sql
app/gui/: admin.py  mainwindow.py  menubar.py  run.py
scripts/: postgres_recreate.sh
