[tool.poetry]
name = "cross-db-rawsql"
version = "0.1.0"
description = ""
authors = ["genndy007 <kochevgenazp@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
psycopg2 = "^2.9.3"
mysql-connector-python = "^8.0.29"
PyQt5 = "^5.15.6"
peewee = "^3.14.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
